--- a/series.conf
+++ b/series.conf
@@ -34812,6 +34812,7 @@
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
 	patches.suse/USB-serial-option-add-SIMCom-8230C-compositions.patch
 	patches.suse/uio-uio_pdrv_genirq-Remove-MODULE_DEVICE_TABLE.patch
+	patches.suse/msft-hv-3336-uio_hv_generic-Let-userspace-take-care-of-interrupt-.patch
 	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
 	patches.suse/pps-fix-warning-in-pps_register_cdev-when-register-d.patch
 	patches.suse/iio-xilinx-ams-Unmask-interrupts-after-updating-alar.patch
