--- a/series.conf
+++ b/series.conf
@@ -12570,6 +12570,7 @@
 	patches.suse/firmware-firmware-meson-sm-fix-compile-test-default.patch
 	patches.suse/soc-ti-pruss-don-t-use-pK-through-printk.patch
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
+	patches.suse/tee-fix-register_shm_helper.patch
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
 	patches.suse/nbd-restrict-sockets-to-TCP-and-UDP.patch
 	patches.suse/md-fix-mssing-blktrace-bio-split-events.patch
