--- a/series.conf
+++ b/series.conf
@@ -56238,6 +56238,7 @@
 	patches.suse/ASoC-SOF-ipc4-topology-Account-for-different-ChainDM.patch
 	patches.suse/ASoC-SOF-Intel-hda-pcm-Place-the-constraint-on-perio.patch
 	patches.suse/ASoC-SOF-Intel-Read-the-LLP-via-the-associated-Link-.patch
+	patches.suse/io_uring-waitid-always-prune-wait-queue-entry-in-io_.patch
 	patches.suse/drm-vmwgfx-Fix-a-null-ptr-access-in-the-cursor-snoop.patch
 	patches.suse/drm-vmwgfx-Fix-Use-after-free-in-validation.patch
 	patches.suse/drm-vmwgfx-Fix-copy-paste-typo-in-validation.patch
