--- a/blacklist.conf
+++ b/blacklist.conf
@@ -991,3 +991,4 @@ ed17aa92dc56b6d8883e4b7a8f1c6fbf5ed6cd29 # incomplete fix that got reverted
 159a98afc88e88f588077afe818081d67f50a5e0 # necessary only if you have the gadget bus code
 1071d560afb4c245c2076494226df47db5a35708 # CVE-2025-39940 https://bugzilla.suse.com/show_bug.cgi?id=1251077#c2
 b83699ea1e62951857c2d8648bd93a4744899eb7 # we don't have loongarch
+8237c01f1696bc53c470493bf1fe092a107648a6 # CVE-2022-50552 wontfix https://bugzilla.suse.com/show_bug.cgi?id=1251733#c5
