--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1258,3 +1258,4 @@ e1bc3a13bd775791cca0bb144d977b00f3598042 # CVE-2025-38189 https://bugzilla.suse.
 5124bc96162667766f6120b19f57a640c2eccb2a # driver not in SLE15
 e4414b01c1cd9887bbde92f946c1ba94e40d6d64 # CVE-2025-39990 https://bugzilla.suse.com/show_bug.cgi?id=1252054#c2
 a7075f501bd33c93570af759b6f4302ef0175168 # CVE-2025-40104 https://bugzilla.suse.com/show_bug.cgi?id=1252921#c6
+79f919a89c9d06816dbdbbd168fa41d27411a7f9 # CVE-2025-39953 https://bugzilla.suse.com/show_bug.cgi?id=1251219#c2
