--- a/blacklist.conf
+++ b/blacklist.conf
@@ -615,3 +615,4 @@ b53e523261bf058ea4a518b482222e7a277b186b # Intrusive io_uring change for small b
 7f3cfb7943d27a7b61bdac8db739cf0bdc28e87d # IO-wait is always accounted as busy time for us for max performance gain
 306d40aa53b671ea72c3bf272f85ccb6c1b0bc65 # comment cleanup
 6851a0c228fc040dce8e4c393004209e7372e0a3 # cleanup that breaks kABI
+e750f85391286a4c8100275516973324b621a269 # CVE-2025-40026 https://bugzilla.suse.com/show_bug.cgi?id=1252764
