--- a/series.conf
+++ b/series.conf
@@ -7322,6 +7322,7 @@
 	patches.suse/net-usb-qmi_wwan-add-Telit-Cinterion-FE990B-composit.patch
 	patches.suse/net-usb-qmi_wwan-fix-Telit-Cinterion-FE990A-name.patch
 	patches.suse/tcp-convert-to-dev_net_rcu.patch
+	patches.suse/net-gro-convert-four-dev_net-calls.patch
 	patches.suse/net-pktgen-fix-mpls-maximum-labels-list-parsing.patch
 	patches.suse/wifi-mac80211-add-strict-mode-disabling-workarounds.patch
 	patches.suse/wifi-mac80211-set-ieee80211_prep_tx_info-link_id-upo.patch
