--- a/series.conf
+++ b/series.conf
@@ -11346,6 +11346,7 @@
 	patches.suse/net-thunderbolt-Enable-end-to-end-flow-control-also-.patch
 	patches.suse/net-dst-annotate-data-races-around-dst-obsolete.patch
 	patches.suse/net-dst-annotate-data-races-around-dst-expires.patch
+	patches.suse/net-dst-annotate-data-races-around-dst-lastuse.patch
 	patches.suse/net-mlx5-Check-device-memory-pointer-before-usage.patch
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
 	patches.suse/dt-bindings-dpll-Add-support-for-Microchip-Azurite-c.patch
