--- a/series.conf
+++ b/series.conf
@@ -11348,6 +11348,7 @@
 	patches.suse/net-dst-annotate-data-races-around-dst-expires.patch
 	patches.suse/net-dst-annotate-data-races-around-dst-lastuse.patch
 	patches.suse/net-dst-annotate-data-races-around-dst-input.patch
+	patches.suse/net-dst-annotate-data-races-around-dst-output.patch
 	patches.suse/net-mlx5-Check-device-memory-pointer-before-usage.patch
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
 	patches.suse/dt-bindings-dpll-Add-support-for-Microchip-Azurite-c.patch
