--- a/series.conf
+++ b/series.conf
@@ -11349,6 +11349,7 @@
 	patches.suse/net-dst-annotate-data-races-around-dst-lastuse.patch
 	patches.suse/net-dst-annotate-data-races-around-dst-input.patch
 	patches.suse/net-dst-annotate-data-races-around-dst-output.patch
+	patches.suse/net-dst-add-four-helpers-to-annotate-data-races-arou.patch
 	patches.suse/net-mlx5-Check-device-memory-pointer-before-usage.patch
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
 	patches.suse/dt-bindings-dpll-Add-support-for-Microchip-Azurite-c.patch
