--- a/series.conf
+++ b/series.conf
@@ -11352,6 +11352,7 @@
 	patches.suse/net-dst-add-four-helpers-to-annotate-data-races-arou.patch
 	patches.suse/ipv4-adopt-dst_dev-skb_dst_dev-and-skb_dst_dev_net-_.patch
 	patches.suse/ipv6-adopt-dst_dev-helper.patch
+	patches.suse/ipv6-adopt-skb_dst_dev-and-skb_dst_dev_net-_rcu-help.patch
 	patches.suse/net-mlx5-Check-device-memory-pointer-before-usage.patch
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
 	patches.suse/dt-bindings-dpll-Add-support-for-Microchip-Azurite-c.patch
