--- a/series.conf
+++ b/series.conf
@@ -11353,6 +11353,7 @@
 	patches.suse/ipv4-adopt-dst_dev-skb_dst_dev-and-skb_dst_dev_net-_.patch
 	patches.suse/ipv6-adopt-dst_dev-helper.patch
 	patches.suse/ipv6-adopt-skb_dst_dev-and-skb_dst_dev_net-_rcu-help.patch
+	patches.suse/ipv6-ip6_mc_input-and-ip6_mr_input-cleanups.patch
 	patches.suse/net-mlx5-Check-device-memory-pointer-before-usage.patch
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
 	patches.suse/dt-bindings-dpll-Add-support-for-Microchip-Azurite-c.patch
