--- a/series.conf
+++ b/series.conf
@@ -12787,6 +12787,7 @@
 	patches.suse/net-phy-micrel-Replace-hardcoded-pages-with-defines.patch
 	patches.suse/idpf-do-not-linearize-big-TSO-packets.patch
 	patches.suse/net-phy-fixed_phy-let-fixed_phy_unregister-free-the-.patch
+	patches.suse/net-dst-introduce-dst-dev_rcu.patch
 	patches.suse/inet-ping-check-sock_net-in-ping_get_port-and-ping_l.patch
 	patches.suse/smsc911x-add-second-read-of-EEPROM-mac-when-possible.patch
 	patches.suse/net-dsa-felix-support-phy-mode-10g-qxgmii.patch
