--- a/series.conf
+++ b/series.conf
@@ -33929,6 +33929,7 @@
 	patches.suse/bpf-ktls-Fix-data-corruption-when-using-bpf_msg_pop_.patch
 	patches.suse/net-thunderbolt-Fix-the-parameter-passing-of-tb_xdom.patch
 	patches.suse/net-thunderbolt-Enable-end-to-end-flow-control-also-.patch
+	patches.suse/net-dst-annotate-data-races-around-dst-obsolete.patch
 	patches.suse/net-mlx5-Check-device-memory-pointer-before-usage.patch
 	patches.suse/wifi-mt76-mt7915-mcu-re-init-MCU-before-loading-FW-p.patch
 	patches.suse/wifi-mac80211-fix-rx-link-assignment-for-non-MLO-sta.patch
