--- a/series.conf
+++ b/series.conf
@@ -33933,6 +33933,7 @@
 	patches.suse/net-dst-annotate-data-races-around-dst-expires.patch
 	patches.suse/net-dst-annotate-data-races-around-dst-lastuse.patch
 	patches.suse/net-dst-annotate-data-races-around-dst-input.patch
+	patches.suse/net-dst-annotate-data-races-around-dst-output.patch
 	patches.suse/net-mlx5-Check-device-memory-pointer-before-usage.patch
 	patches.suse/wifi-mt76-mt7915-mcu-re-init-MCU-before-loading-FW-p.patch
 	patches.suse/wifi-mac80211-fix-rx-link-assignment-for-non-MLO-sta.patch
