--- a/series.conf
+++ b/series.conf
@@ -34276,6 +34276,7 @@
 	patches.suse/ipv6-reject-malicious-packets-in-ipv6_gso_segment.patch
 	patches.suse/net-drop-UFO-packets-in-udp_rcv_segment.patch
 	patches.suse/net-sched-taprio-enforce-minimum-value-for-picos_per.patch
+	patches.suse/net-Add-locking-to-protect-skb-dev-access-in-ip_outp.patch
 	patches.suse/net-packet-fix-a-race-in-packet_set_ring-and-packet_.patch
 	patches.suse/net-sched-mqprio-fix-stack-out-of-bounds-write-in-tc.patch
 	patches.suse/pptp-fix-pptp_xmit-error-path.patch
