--- a/series.conf
+++ b/series.conf
@@ -34856,6 +34856,7 @@
 	patches.suse/net-mana-Use-page-pool-fragments-for-RX-buffers-inst.patch
 	patches.suse/sctp-Fix-MAC-comparison-to-be-constant-time.patch
 	patches.suse/net-phy-fixed_phy-let-fixed_phy_unregister-free-the-.patch
+	patches.suse/net-dst-introduce-dst-dev_rcu.patch
 	patches.suse/net-nfc-nci-Increase-NCI_DATA_TIMEOUT-to-3000-ms.patch
 	patches.suse/net-phy-marvell-Fix-88e1510-downshift-counter-errata.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
