--- a/series.conf
+++ b/series.conf
@@ -12788,6 +12788,7 @@
 	patches.suse/idpf-do-not-linearize-big-TSO-packets.patch
 	patches.suse/net-phy-fixed_phy-let-fixed_phy_unregister-free-the-.patch
 	patches.suse/net-dst-introduce-dst-dev_rcu.patch
+	patches.suse/tcp_metrics-use-dst_dev_net_rcu.patch
 	patches.suse/ipv4-start-using-dst_dev_rcu.patch
 	patches.suse/inet-ping-check-sock_net-in-ping_get_port-and-ping_l.patch
 	patches.suse/smsc911x-add-second-read-of-EEPROM-mac-when-possible.patch
