--- a/series.conf
+++ b/series.conf
@@ -34863,6 +34863,7 @@
 	patches.suse/net-phy-marvell-Fix-88e1510-downshift-counter-errata.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/wifi-mac80211-Fix-HE-capabilities-element-check.patch
+	patches.suse/smc-Fix-use-after-free-in-__pnet_find_base_ndev.patch
 	patches.suse/net-phy-clear-link-parameters-on-admin-link-down.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
