--- a/series.conf
+++ b/series.conf
@@ -12807,6 +12807,7 @@
 	patches.suse/dpll-zl3073x-Refactor-DPLL-initialization.patch
 	patches.suse/dpll-zl3073x-Implement-devlink-flash-callback.patch
 	patches.suse/smc-Fix-use-after-free-in-__pnet_find_base_ndev.patch
+	patches.suse/smc-Use-__sk_dst_get-and-dst_dev_rcu-in-in-smc_clc_p.patch
 	patches.suse/net-phy-clear-link-parameters-on-admin-link-down.patch
 	patches.suse/net-ethernet-microchip-sparx5-make-it-selectable-for.patch
 	patches.suse/r8169-set-EEE-speed-down-ratio-to-1.patch
