--- a/series.conf
+++ b/series.conf
@@ -34865,6 +34865,7 @@
 	patches.suse/wifi-mac80211-Fix-HE-capabilities-element-check.patch
 	patches.suse/smc-Fix-use-after-free-in-__pnet_find_base_ndev.patch
 	patches.suse/smc-Use-__sk_dst_get-and-dst_dev_rcu-in-in-smc_clc_p.patch
+	patches.suse/smc-Use-__sk_dst_get-and-dst_dev_rcu-in-smc_clc_prfx.patch
 	patches.suse/net-phy-clear-link-parameters-on-admin-link-down.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
