--- a/series.conf
+++ b/series.conf
@@ -12810,6 +12810,7 @@
 	patches.suse/smc-Use-__sk_dst_get-and-dst_dev_rcu-in-in-smc_clc_p.patch
 	patches.suse/smc-Use-__sk_dst_get-and-dst_dev_rcu-in-smc_clc_prfx.patch
 	patches.suse/mptcp-Call-dst_release-in-mptcp_active_enable.patch
+	patches.suse/mptcp-Use-__sk_dst_get-and-dst_dev_rcu-in-mptcp_acti.patch
 	patches.suse/net-phy-clear-link-parameters-on-admin-link-down.patch
 	patches.suse/net-ethernet-microchip-sparx5-make-it-selectable-for.patch
 	patches.suse/r8169-set-EEE-speed-down-ratio-to-1.patch
