--- a/series.conf
+++ b/series.conf
@@ -12124,6 +12124,7 @@
 	patches.suse/net-rose-include-node-references-in-rose_neigh-refco.patch
 	patches.suse/sctp-initialize-more-fields-in-sctp_v6_from_sk.patch
 	patches.suse/net-rose-fix-a-typo-in-rose_clear_routes.patch
+	patches.suse/fbnic-Move-phylink-resume-out-of-service_task-and-in.patch
 	patches.suse/io_uring-kbuf-fix-signedness-in-this_len-calculation.patch
 	patches.suse/io_uring-kbuf-always-use-READ_ONCE-to-read-ring-prov.patch
 	patches.suse/blk-zoned-Fix-a-lockdep-complaint-about-recursive-locking.patch
