--- a/series.conf
+++ b/series.conf
@@ -13116,6 +13116,7 @@
 	patches.suse/net-sctp-fix-a-null-dereference-in-sctp_disposition-.patch
 	patches.suse/net-wwan-t7xx-add-support-for-HP-DRMR-H01.patch
 	patches.suse/tcp-Don-t-call-reqsk_fastopen_remove-in-tcp_conn_request.patch
+	patches.suse/net-mscc-ocelot-Fix-use-after-free-caused-by-cyclic-.patch
 	patches.suse/ice-ice_adapter-release-xa-entry-on-adapter-allocati.patch
 	patches.suse/net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MDIO-RTNL.patch
 	patches.suse/netfilter-nft_objref-validate-objref-and-objrefmap-e.patch
