--- a/series.conf
+++ b/series.conf
@@ -34629,6 +34629,7 @@
 	patches.suse/cpufreq-Initialize-cpufreq-based-invariance-before-subsys.patch
 	patches.suse/arm64-dts-imx8mp-Correct-thermal-sensor-index.patch
 	patches.suse/tracing-dynevent-Add-a-missing-lockdown-check-on-dynevent.patch
+	patches.suse/vhost-Take-a-reference-on-the-task-in-struct-vhost_t.patch
 	patches.suse/Bluetooth-hci_sync-Fix-hci_resume_advertising_sync.patch
 	patches.suse/Bluetooth-hci_event-Fix-UAF-in-hci_acl_create_conn_s.patch
 	patches.suse/Bluetooth-MGMT-Fix-possible-UAFs.patch
