--- a/series.conf
+++ b/series.conf
@@ -12562,6 +12562,7 @@
 	patches.suse/bpf-arm64-Call-bpf_jit_binary_pack_finalize-in-bpf_jit_fre.patch
 	patches.suse/selftests-bpf-Fix-flaky-bpf_cookie-selftest.patch
 	patches.suse/bpf-Enforce-expected_attach_type-for-tailcall-compat.patch
+	patches.suse/selftests-bpf-Add-test-case-for-different-expected_a.patch
 	patches.suse/driver-core-PM-Set-power.no_callbacks-along-with-pow.patch
 	patches.suse/hwmon-k10temp-Add-thermal-support-for-AMD-Family-1Ah.patch
 	patches.suse/hwmon-k10temp-Add-device-ID-for-Strix-Halo.patch
