--- a/series.conf
+++ b/series.conf
@@ -34673,6 +34673,7 @@
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tr.patch
 	patches.suse/arm64-cputype-Add-Neoverse-V3AE-definitions.patch
 	patches.suse/arm64-errata-Apply-workarounds-for-Neoverse-V3AE.patch
+	patches.suse/perf-arm_spe-Prevent-overflow-in-PERF_IDX2OFF.patch
 	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-powernv-pci-Fix-underflow-and-leak-issue.patch
 	patches.suse/btrfs-fix-the-incorrect-max_bytes-value-for-find_loc.patch
