--- a/series.conf
+++ b/series.conf
@@ -12470,6 +12470,7 @@
 	patches.suse/arm64-cputype-Add-Neoverse-V3AE-definitions.patch
 	patches.suse/arm64-errata-Apply-workarounds-for-Neoverse-V3AE.patch
 	patches.suse/arm64-map-_text-_stext-virtual-address-range-non-executabl.patch
+	patches.suse/perf-arm_spe-Prevent-overflow-in-PERF_IDX2OFF.patch
 	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-powernv-pci-Fix-underflow-and-leak-issue.patch
 	patches.suse/powerpc-ftrace-ensure-ftrace-record-ops-are-always-set-for-NOPs.patch
