--- a/series.conf
+++ b/series.conf
@@ -34911,6 +34911,7 @@
 	patches.suse/jfs-Verify-inode-mode-when-loading-from-disk.patch
 	patches.suse/jfs-fix-uninitialized-waitqueue-in-transaction-manager.patch
 	patches.suse/orangefs-Remove-unused-type-in-macro-fill_default_sys_attrs.patch
+	patches.suse/orangefs-fix-xattr-related-buffer-overflow.patch
 	patches.suse/exfat-limit-log-print-for-IO-error.patch
 	patches.suse/smb-client-fix-crypto-buffers-in-non-linear-memory.patch
 	patches.suse/NFSv4-handle-ERR_GRACE-on-delegation-recalls.patch
