--- a/series.conf
+++ b/series.conf
@@ -13681,6 +13681,7 @@
 	patches.suse/drm-amdgpu-add-missing-lock-to-amdgpu_ttm_access_mem.patch
 	patches.suse/ASoC-tas2781-correct-the-wrong-period.patch
 	patches.suse/ASoC-fsl_xcvr-clear-the-channel-status-control-memor.patch
+	patches.suse/ALSA-dice-fix-buffer-overflow-in-detect_stream_forma.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
