--- a/series.conf
+++ b/series.conf
@@ -13191,6 +13191,7 @@
 	patches.suse/drm-amdgpu-Report-individual-reset-error.patch
 	patches.suse/drm-amd-display-Enable-Dynamic-DTBCLK-Switch.patch
 	patches.suse/mm-ksm-fix-flag-dropping-behavior-in-ksm_madvise.patch
+	patches.suse/mm-hugetlb-avoid-soft-lockup-when-mprotect-to-large-.patch
 	patches.suse/bpf-Fix-metadata_dst-leak-__bpf_redirect_neigh_v-4-6.patch
 	patches.suse/xsk-Harden-userspace-supplied-xdp_desc-validation.patch
 	patches.suse/bpf-Avoid-RCU-context-warning-when-unpinning-htab-wi.patch
