--- a/series.conf
+++ b/series.conf
@@ -12459,6 +12459,7 @@
 	patches.suse/platform-x86-amd-pmc-Add-Stellaris-Slim-Gen6-AMD-to-.patch
 	patches.suse/platform-x86-lg-laptop-Fix-WMAB-call-in-fan_mode_sto.patch
 	patches.suse/x86-topology-Implement-topology_is_core_online-to-address-.patch
+	patches.suse/mm-hugetlb-fix-folio-is-still-mapped-when-deleted.patch
 	patches.suse/fs-proc-task_mmu-check-p-vec_buf-for-NULL.patch
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
 	patches.suse/listmount-don-t-call-path_put-under-namespace-semaph.patch
