--- a/series.conf
+++ b/series.conf
@@ -59402,6 +59402,7 @@
 	patches.suse/ASoC-Intel-bytcr_rt5651-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/sctp-Fix-MAC-comparison-to-be-constant-time.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
+	patches.suse/crypto-essiv-Check-ssize-for-decryption-and-in-place.patch
 	patches.suse/mm-ksm-fix-flag-dropping-behavior-in-ksm_madvise.patch
 
 	########################################################
