--- a/series.conf
+++ b/series.conf
@@ -23357,6 +23357,7 @@
 	patches.suse/scsi-lpfc-Fix-use-after-free-KFENCE-violation-during-sysfs.patch
 	patches.suse/USB-ene_usb6250-Allocate-enough-memory-for-full-obje.patch
 	patches.suse/kobject-Fix-slab-out-of-bounds-in-fill_kobj_path.patch
+	patches.suse/cacheinfo-Fix-shared_cpu_map-to-handle-shared-caches.patch
 	patches.suse/RDMA-core-Refactor-rdma_bind_addr.patch
 	patches.suse/KVM-Destroy-target-device-if-coalesced-MMIO-unregist.patch
 	patches.suse/media-rc-Fix-use-after-free-bugs-caused-by-ene_tx_ir.patch
