--- a/series.conf
+++ b/series.conf
@@ -33421,6 +33421,7 @@
 	patches.suse/mtd-spinand-fix-memory-leak-of-ECC-engine-conf.patch
 	patches.suse/ACPICA-Refuse-to-evaluate-a-method-if-arguments-are-.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
+	patches.suse/smb-Log-an-error-when-close_all_cached_dirs-fails.patch
 	patches.suse/perf-Fix-sample-vs-do_exit.patch
 	patches.suse/perf-Fix-cgroup-state-vs-ERROR.patch
 	patches.suse/perf-core-Fix-WARN-in-perf_cgroup_switch.patch
