--- a/series.conf
+++ b/series.conf
@@ -10514,6 +10514,7 @@
 	patches.suse/ACPICA-Refuse-to-evaluate-a-method-if-arguments-are-.patch
 	patches.suse/nfsd-use-threads-array-as-is-in-netlink-interface.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
+	patches.suse/smb-Log-an-error-when-close_all_cached_dirs-fails.patch
 	patches.suse/KVM-TDX-Add-new-TDVMCALL-status-code-for-unsupported.patch
 	patches.suse/KVM-TDX-Handle-TDG.VP.VMCALL-GetQuote.patch
 	patches.suse/KVM-TDX-Exit-to-userspace-for-GetTdVmCallInfo.patch
