--- a/series.conf
+++ b/series.conf
@@ -13717,6 +13717,7 @@
 	patches.suse/wifi-ieee80211-correct-FILS-status-codes.patch
 	patches.suse/wifi-nl80211-vendor-cmd-intel-fix-a-blank-kernel-doc.patch
 	patches.suse/net-phy-aquantia-check-for-NVMEM-deferral.patch
+	patches.suse/ext4-align-max-orphan-file-size-with-e2fsprogs-limit.patch
 	patches.suse/media-dvb-usb-dtv5100-fix-out-of-bounds-in-dtv5100_i.patch
 	patches.suse/media-TDA1997x-Remove-redundant-cancel_delayed_work-.patch
 	patches.suse/media-i2c-adv7842-Remove-redundant-cancel_delayed_wo.patch
