--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1262,3 +1262,4 @@ a7075f501bd33c93570af759b6f4302ef0175168 # CVE-2025-40104 https://bugzilla.suse.
 e750f85391286a4c8100275516973324b621a269 # CVE-2025-40026 https://bugzilla.suse.com/show_bug.cgi?id=1252764
 1e56310b40fd2e7e0b9493da9ff488af145bdd0c # CVE-2025-39961 https://bugzilla.suse.com/show_bug.cgi?id=1251817#c2
 9ffaf5229055fcfbb3b3d6f1c7e58d63715c3f73 # CVE-2025-39958 https://bugzilla.suse.com/show_bug.cgi?id=1251812#c2
+4c7ef92f6d4d08a27d676e4c348f4e2922cab3ed # CVE-2025-40125 https://bugzilla.suse.com/show_bug.cgi?id=1253371#c2
