--- a/series.conf
+++ b/series.conf
@@ -54,6 +54,7 @@
 	patches.kernel.org/6.18.1-025-comedi-multiq3-sanitize-config-options-in-mult.patch
 	patches.kernel.org/6.18.1-026-comedi-check-device-s-attached-status-in-compa.patch
 	patches.kernel.org/6.18.1-027-staging-rtl8723bs-fix-out-of-bounds-read-in-rt.patch
+	patches.kernel.org/6.18.1-028-staging-rtl8723bs-fix-stack-buffer-overflow-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
