--- a/series.conf
+++ b/series.conf
@@ -13931,6 +13931,7 @@
 	patches.suse/i2c-amd-mp2-fix-reference-leak-in-MP2-PCI-device.patch
 	patches.suse/regulator-fixed-Rely-on-the-core-freeing-the-enable-.patch
 	patches.suse/ALSA-hda-cs35l41-Fix-NULL-pointer-dereference-in-cs3-c34b04c.patch
+	patches.suse/ALSA-firewire-motu-fix-buffer-overflow-in-hwdep-read.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
