--- a/series.conf
+++ b/series.conf
@@ -13903,6 +13903,7 @@
 	patches.suse/usb-gadget-tegra-xudc-Always-reinitialize-data-toggl.patch
 	patches.suse/staging-fbtft-core-fix-potential-memory-leak-in-fbtf.patch
 	patches.suse/staging-rtl8723bs-fix-out-of-bounds-read-in-rtw_get_.patch
+	patches.suse/staging-rtl8723bs-fix-stack-buffer-overflow-in-OnAss.patch
 	patches.suse/clk-renesas-cpg-mssr-Add-missing-1ms-delay-into-rese.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-memory-leak-in-error-path.patch
 	patches.suse/clk-samsung-exynos-clkout-Assign-.num-before-accessi.patch
