--- a/series.conf
+++ b/series.conf
@@ -56720,6 +56720,7 @@
 	patches.suse/Bluetooth-MGMT-Fix-OOB-access-in-parse_adv_monitor_p.patch
 	patches.suse/isdn-mISDN-hfcsusb-fix-memory-leak-in-hfcsusb_probe.patch
 	patches.suse/net-usb-qmi_wwan-initialize-MAC-header-offset-in-qmi.patch
+	patches.suse/bnxt_en-Shutdown-FW-DMA-in-bnxt_shutdown.patch
 	patches.suse/wifi-mac80211_hwsim-Limit-destroy_on_close-radio-rem.patch
 	patches.suse/lib-crypto-curve25519-hacl64-Fix-older-clang-KASAN-w.patch
 	patches.suse/ACPI-SBS-Fix-present-test-in-acpi_battery_read.patch
