--- a/series.conf
+++ b/series.conf
@@ -12923,6 +12923,7 @@
 	patches.kernel.org/6.12.63-321-nvme-auth-use-kvfree-for-memory-allocated-wit.patch
 	patches.kernel.org/6.12.63-322-drm-plane-Fix-IS_ERR-vs-NULL-check-in-drm_pla.patch
 	patches.kernel.org/6.12.63-323-regulator-fixed-Rely-on-the-core-freeing-the-.patch
+	patches.kernel.org/6.12.63-324-ALSA-firewire-motu-fix-buffer-overflow-in-hwd.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
