--- a/series.conf
+++ b/series.conf
@@ -12553,6 +12553,7 @@
 	patches.suse/powerpc-ftrace-ensure-ftrace-record-ops-are-always-set-for-NOPs.patch
 	patches.suse/powerpc64-modules-correctly-iterate-over-stubs-in-setup_ftrace_ool_stubs.patch
 	patches.suse/xen-events-Cleanup-find_virq-return-codes.patch
+	patches.suse/xen-events-Return-EEXIST-for-bound-VIRQs.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
 	patches.suse/btrfs-fix-the-incorrect-max_bytes-value-for-find_loc.patch
 	patches.suse/btrfs-use-smp_mb__after_atomic-when-forcing-COW-in-c.patch
