--- a/series.conf
+++ b/series.conf
@@ -13379,6 +13379,7 @@
 	patches.suse/can-rockchip-canfd-rkcanfd_start_xmit-use-can_dev_dr.patch
 	patches.suse/can-netlink-can_changelink-allow-disabling-of-automa.patch
 	patches.suse/sctp-avoid-NULL-dereference-when-chunk-data-buffer-i.patch
+	patches.suse/vsock-fix-lock-inversion-in-vsock_assign_transport.patch
 	patches.suse/arm64-mm-avoid-always-making-PTE-dirty-in-pte_mkwrite.patch
 	patches.suse/arm64-mte-Do-not-warn-if-the-page-is-already-tagged-in-cop.patch
 	patches.suse/gpio-104-idio-16-Define-maximum-valid-register-addre.patch
