--- a/series.conf
+++ b/series.conf
@@ -13610,6 +13610,7 @@
 	patches.suse/HID-playstation-Fix-memory-leak-in-dualshock4_get_ca.patch
 	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
 	patches.suse/idpf-fix-possible-vport_config-NULL-pointer-deref-in.patch
+	patches.suse/vsock-Ignore-signal-timeout-on-connect-if-already-es.patch
 	patches.suse/platform-x86-huawei-wmi-add-keys-for-HONOR-models.patch
 	patches.suse/platform-x86-amd-pmc-Add-spurious_8042-to-Xbox-Ally.patch
 	patches.suse/platform-x86-amd-pmc-Add-Lenovo-Legion-Go-2-to-pmc-q.patch
