--- a/series.conf
+++ b/series.conf
@@ -34692,6 +34692,7 @@
 	patches.suse/perf-arm_spe-Prevent-overflow-in-PERF_IDX2OFF.patch
 	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-powernv-pci-Fix-underflow-and-leak-issue.patch
+	patches.suse/xen-events-Cleanup-find_virq-return-codes.patch
 	patches.suse/btrfs-fix-the-incorrect-max_bytes-value-for-find_loc.patch
 	patches.suse/btrfs-use-smp_mb__after_atomic-when-forcing-COW-in-c.patch
 	patches.suse/EDAC-i10nm-Skip-DIMM-enumeration-on-a-disabled-memor.patch
