--- a/series.conf
+++ b/series.conf
@@ -35308,6 +35308,7 @@
 	patches.suse/HID-amd_sfh-Stop-sensor-before-starting.patch
 	patches.suse/HID-hid-ntrig-Prevent-memory-leak-in-ntrig_report_ve.patch
 	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
+	patches.suse/vsock-Ignore-signal-timeout-on-connect-if-already-es.patch
 	patches.suse/platform-x86-intel-speed_select_if-Convert-PCIBIOS_-.patch
 	patches.suse/drm-tegra-dc-Fix-reference-leak-in-tegra_dc_couple.patch
 	patches.suse/drm-tegra-Add-call-to-put_pid.patch
