--- a/series.conf
+++ b/series.conf
@@ -13660,6 +13660,7 @@
 	patches.suse/Bluetooth-SMP-Fix-not-generating-mackey-and-ltk-when.patch
 	patches.suse/atm-fore200e-Fix-possible-data-race-in-fore200e_open.patch
 	patches.suse/net-phy-mxl-gpy-fix-link-properties-on-USXGMII-and-i.patch
+	patches.suse/net-atlantic-fix-fragment-overflow-handling-in-RX-path.patch
 	patches.suse/can-kvaser_usb-leaf-Fix-potential-infinite-loop-in-c.patch
 	patches.suse/can-sja1000-fix-max-irq-loop-handling.patch
 	patches.suse/can-gs_usb-gs_usb_xmit_callback-fix-handling-of-fail.patch
