--- a/series.conf
+++ b/series.conf
@@ -35271,6 +35271,7 @@
 	patches.suse/NFSD-Skip-close-replay-processing-if-XDR-encoding-fails.patch
 	patches.suse/NFSD-Never-cache-a-COMPOUND-when-the-SEQUENCE-operation-fails.patch
 	patches.suse/strparser-Fix-signed-unsigned-mismatch-bug.patch
+	patches.suse/tipc-Fix-use-after-free-in-tipc_mon_reinit_self.patch
 	patches.suse/Bluetooth-MGMT-cancel-mesh-send-timer-when-hdev-remo.patch
 	patches.suse/Bluetooth-btusb-reorder-cleanup-in-btusb_disconnect-.patch
 	patches.suse/Bluetooth-6lowpan-reset-link-local-header-on-ipv6-re.patch
