--- a/series.conf
+++ b/series.conf
@@ -13369,6 +13369,7 @@
 	patches.suse/HID-multitouch-fix-sticky-fingers.patch
 	patches.suse/HID-logitech-hidpp-Add-HIDPP_QUIRK_RESET_HI_RES_SCRO.patch
 	patches.suse/x86-resctrl-Fix-miscount-of-bandwidth-event-when-reactivat.patch
+	patches.suse/ocfs2-clear-extent-cache-after-moving-defragmenting-.patch
 	patches.suse/mm-mremap-correctly-account-old-mapping-after-MREMAP.patch
 	patches.suse/msft-hv-3361-scsi-storvsc-Prefer-returning-channel-with-the-same-.patch
 	patches.suse/scsi-libfc-Prevent-integer-overflow-in-fc_fcp_recv_data.patch
