--- a/series.conf
+++ b/series.conf
@@ -35172,6 +35172,7 @@
 	patches.suse/HID-quirks-avoid-Cooler-Master-MM712-dongle-wakeup-b.patch
 	patches.suse/HID-hid-input-only-ignore-0-battery-events-for-digit.patch
 	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
+	patches.suse/ocfs2-clear-extent-cache-after-moving-defragmenting-.patch
 	patches.suse/msft-hv-3361-scsi-storvsc-Prefer-returning-channel-with-the-same-.patch
 	patches.suse/scsi-libfc-Prevent-integer-overflow-in-fc_fcp_recv_data.patch
 	patches.suse/btrfs-send-fix-duplicated-rmdir-operations-when-usin.patch
