--- a/series.conf
+++ b/series.conf
@@ -59405,6 +59405,7 @@
 	patches.suse/sctp-Fix-MAC-comparison-to-be-constant-time.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 	patches.suse/mm-ksm-fix-flag-dropping-behavior-in-ksm_madvise.patch
+	patches.suse/ocfs2-clear-extent-cache-after-moving-defragmenting-.patch
 
 	########################################################
 	# end of sorted patches
