--- a/series.conf
+++ b/series.conf
@@ -35229,6 +35229,7 @@
 	patches.suse/drm-etnaviv-fix-flush-sequence-logic.patch
 	patches.suse/drm-panel-sitronix-st7789v-fix-sync-flags-for-t28cp4.patch
 	patches.suse/drm-panel-kingdisplay-kd097d04-Disable-EoTp.patch
+	patches.suse/bpf-Sync-pending-IRQ-work-before-freeing-ring-buffer.patch
 	patches.suse/kconfig-mconf-Initialize-the-default-locale-at-start.patch
 	patches.suse/kconfig-nconf-Initialize-the-default-locale-at-start.patch
 	patches.suse/x86-CPU-AMD-Add-RDSEED-fix-for-Zen5.patch
