--- a/series.conf
+++ b/series.conf
@@ -13598,6 +13598,7 @@
 	patches.suse/NFS-sysfs-fix-leak-when-nfs_client-kobject-add-fails.patch
 	patches.suse/NFSv4-Fix-an-incorrect-parameter-when-calling-nfs4_call_sync.patch
 	patches.suse/NFS-Fix-LTP-test-failures-when-timestamps-are-delegated.patch
+	patches.suse/bpf-account-for-current-allocated-stack-depth-in-wid.patch
 	patches.suse/x86-CPU-AMD-Add-additional-fixed-RDSEED-microcode-revision.patch
 	patches.suse/x86-microcode-AMD-Add-Zen5-model-0x44-stepping-0x1-minrev.patch
 	patches.suse/s390-sles16-s390-mm-Fix-__ptep_rdp-inline-assembly.patch
