--- a/series.conf
+++ b/series.conf
@@ -35301,6 +35301,7 @@
 	patches.suse/mmc-sdhci-of-dwcmshc-Change-DLL_STRBIN_TAPNUM_DEFAUL.patch
 	patches.suse/drm-vmwgfx-Validate-command-header-size-against-SVGA.patch
 	patches.suse/bpf-account-for-current-allocated-stack-depth-in-wid.patch
+	patches.suse/selftests-bpf-Test-widen_imprecise_scalars-with-diff.patch
 	patches.suse/x86-CPU-AMD-Add-additional-fixed-RDSEED-microcode-revision.patch
 	patches.suse/mtdchar-fix-integer-overflow-in-read-write-ioctls.patch
 	patches.suse/mtd-rawnand-cadence-fix-DMA-device-NULL-pointer-dere.patch
